# fonts

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  AUTHORS  AUTHORS.txt  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS  CONTRIBUTORS.txt  CXZC  Cargo.toml  Fonts  Fonts.md  Home.md  Home.wiki  HowToGenerateWebNativeFonts.md  HowToGenerateWebNativeFonts.wiki  HowToGenerateWebNativeFontsWithFontForge.md  HowToGenerateWebNativeFontsWithFontForge.wiki  InstallingTTFAutoHint.md  InstallingTTFAutoHint.wiki  Jenkinsfile  Mira nomás  MovingToGit.md  MovingToGit.wiki  ProjectChecklist.md  QuickStartGlyphs.md  README.md  TRIVIA.md  Tipo de escritura  UpgradingExistingRepositories.md  VerticalMetrics.md  VerticalMetricsRecommendations.md  VerticalMetricsRecommendations.wiki  WebFontRecommendations.md  WebFontsUsageDatabase.md  (+51 more)
axisregistry/: .gitignore  AUTHORS.txt  CONTRIBUTORS.txt  Cargo.toml  README.md  build.rs  casual.textproto  cursive.textproto  expression.textproto  fill.textproto  flair.textproto  grade.textproto  italic.textproto  monospace.textproto  optical_size.textproto  pyproject.toml  requirements.txt  setup.py  slant.textproto  softness.textproto  terminal_sharpness.textproto  terminal_slope.textproto  tox.ini  volume.textproto  weight.textproto  width.textproto  wonkiness.textproto  wonky.textproto  x_opaque.textproto  x_transparent.textproto  x_transparent_figures.textproto  y_opaque.textproto  y_transparent_descender.textproto  y_transparent_figures.textproto  y_transparent_lowercase.textproto  y_transparent_uppercase.textproto
axisregistry/.github/ISSUE_TEMPLATE/: 1_add-axis.md  2_anything-else.md
axisregistry/.github/workflows/: publish-release.yml  rust.yml
axisregistry/Lib/axisregistry/: __init__.py  axes_pb2.py
axisregistry/src/: lib.rs  nametable.rs  stat.rs
axisregistry/tests/: gen_test_data.py  test_axisregistry_api.py  test_names.py  test_wellformed.py
axisregistry/tests/data/: OpenSans-Italic[wdth,wght]_STAT.ttx  OpenSansCondensed-Italic[wght]_STAT.ttx  OpenSansCondensed[wght]_STAT.ttx  OpenSans[wdth,wght]_STAT.ttx  RobotoFlex[GRAD,XOPQ,XTRA,YOPQ,YTAS,YTDE,YTFI,YTLC,YTUC,opsz,slnt,wdth,wght]_STAT.ttx  Wavefont[ROND,YALN,wght]_STAT.ttx
lang/: .gitignore  CHANGELOG.md  CONTRIBUTORS.txt  Cargo.toml  README.md  build.rs  dev-requirements.txt  pyproject.toml  requirements.txt  setup.py  tox.ini
lang/.github/workflows/: publish-release.yml  test.yml  tox.yml
lang/Lib/gflanguages/: __init__.py  languages_public.proto  languages_public_pb2.py  udhr.py
lang/languages/: aa.textproto  ab.textproto  ab_Cyrl.textproto  abq.textproto  abq_Cyrl.textproto  abr.textproto  abr_Latn.textproto  ace.textproto  ace_Latn.textproto  acf_Latn.textproto  ach.textproto  acu_Latn.textproto  ada.textproto  adl_Latn.textproto  ady.textproto  ady_Cyrl.textproto  ae.textproto  ae_Avst.textproto  aeb.textproto  af.textproto  agq.textproto  agr_Latn.textproto  aho.textproto  aii.textproto  aii_Cyrl.textproto  aii_Latn.textproto  aii_Syrc.textproto  ain.textproto  ain_Kana.textproto  ain_Latn.textproto  ajg_Latn.textproto  ak.textproto  akk.textproto  akk_Xsux.textproto  akz.textproto  akz_Latn.textproto  ale.textproto  ale_Latn.textproto  aln.textproto  aln_Latn.textproto  (+1550 more)
lang/languages/aa/: language.textproto  sampletext.textproto
lang/languages/ab/: language.textproto  sampletext.textproto
lang/languages/abr/: language.textproto
lang/languages/ace/: language.textproto  sampletext.textproto
lang/languages/ach/: language.textproto
lang/languages/ada/: language.textproto  sampletext.textproto
lang/languages/ady/: language.textproto  sampletext.textproto
lang/languages/aeb/: language.textproto
lang/languages/af/: language.textproto  sampletext.textproto
lang/languages/agq/: language.textproto
lang/languages/ak/: language.textproto  sampletext.textproto
lang/languages/aln/: language.textproto
lang/languages/alt/: language.textproto  sampletext.textproto
lang/languages/am/: language.textproto  sampletext.textproto
lang/languages/amo/: language.textproto
lang/languages/an/: language.textproto
lang/languages/aoz/: language.textproto
lang/languages/ar/: language.textproto  sampletext.textproto
lang/languages/arn/: language.textproto  sampletext.textproto
lang/languages/aro/: language.textproto
lang/languages/arq/: language.textproto
lang/languages/ars/: language.textproto
lang/languages/ary/: language.textproto
lang/languages/arz/: language.textproto
lang/languages/as/: language.textproto
lang/regions/: AC.textproto  AD.textproto  AE.textproto  AF.textproto  AG.textproto  AI.textproto  AL.textproto  AM.textproto  AO.textproto  AQ.textproto  AR.textproto  AS.textproto  AT.textproto  AU.textproto  AW.textproto  AX.textproto  AZ.textproto  BA.textproto  BB.textproto  BD.textproto  BE.textproto  BF.textproto  BG.textproto  BH.textproto  BI.textproto  BJ.textproto  BL.textproto  BM.textproto  BN.textproto  BO.textproto  BQ.textproto  BR.textproto  BS.textproto  BT.textproto  BV.textproto  BW.textproto  BY.textproto  BZ.textproto  CA.textproto  CC.textproto  (+216 more)
lang/scripts/: Adlm.textproto  Aghb.textproto  Ahom.textproto  Arab.textproto  Armi.textproto  Armn.textproto  Avst.textproto  Bali.textproto  Bamu.textproto  Bass.textproto  Batk.textproto  Beng.textproto  Bhks.textproto  Bopo.textproto  Brah.textproto  Bugi.textproto  Buhd.textproto  Cakm.textproto  Cans.textproto  Cari.textproto  Cham.textproto  Cher.textproto  Copt.textproto  Cprt.textproto  Cyrl.textproto  Deva.textproto  Dogr.textproto  Dsrt.textproto  Dupl.textproto  Egyp.textproto  Elba.textproto  Elym.textproto  Ethi.textproto  Geor.textproto  Glag.textproto  Gong.textproto  Gonm.textproto  Goth.textproto  Gran.textproto  Grek.textproto  (+109 more)
lang/snippets/: add-all-scripts.py  fill_sample.py  fix-exemplars-bases.py  fix-exemplars-duplicates.py  supported_languages.py
lang/src/: lib.rs
lang/tests/: test_data_languages.py  test_dottedcircle.py  test_gflanguages_api.py  test_parsable.py
(+19012 files in other folders)
