[package]
name = "google-fonts-axisregistry"
version = "0.4.15"
edition = "2021"
description = "Google Fonts font axis support data"
repository = "https://github.com/googlefonts/axisregistry"
license-file = "LICENSE.txt"

[features]
default = ["fontations"]

[dependencies]
bytes = "1.7.1"
prost = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fontations = { version = "0.2.0", optional = true }
indexmap = "2.7.0"

[dev-dependencies]
pretty_assertions = "1.4.1"

[build-dependencies]
prost-build = "0.13"
protobuf-support = "3.7.1"
protobuf = "3.7.1"
protobuf-parse = "3.7.1"
glob = "0"
prettyplease = "0.2"
quote = "1.0"
proc-macro2 = "1.0"
syn = "2.0"
itertools = "0.13"
serde_json = "1.0"
