[package]
name = "google-fonts-axisregistry"
version = "0.4.18"
edition = "2021"
description = "Google Fonts font axis support data"
repository = "https://github.com/googlefonts/axisregistry"
license-file = "LICENSE.txt"

[features]
default = ["fontations"]

[dependencies]
bytes = "1.7.1"
gf-metadata = "0.2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fontations = { version = "0.3.0", optional = true }
indexmap = "2.7.0"

[dev-dependencies]
pretty_assertions = "1.4.1"

[build-dependencies]
glob = "0"
prettyplease = "0.2"
quote = "1.0"
proc-macro2 = "1.0"
syn = "2.0"
itertools = "0.13"
gf-metadata = "0.2.4"
